--- a/SITE/mediaqueries.css
+++ b/SITE/mediaqueries.css
@@ -19,11 +19,22 @@
         background-image: url("./assets/poldo_mobile.jpg");
     } */
 
-    .header{
-        background-image: url("./assets/poldo_mobile.jpg") !important;
-        background-size: 115%;
+    .header::before {
+        content: '';
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        position: fixed;
+        background-image: url("./assets/poldo_mobile.jpg");
         background-position: top;
-    }
+        background-size: 115%;
+        background-repeat: no-repeat;
+    
+        /* This is the important part */
+        will-change: transform; 
+      }
 
     .header::after {
         content: "";
